# DPS-AI-Challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: functions.py  main.py  models.py  router.py
experimentation/: EDA.ipynb  model_training.ipynb
models/: prophet-model.json
