[tool.poetry]
name = "dps-ai-challenge"
version = "0.1.0"
description = "Application for DPS Artificial Intelligence Engineer Challenge."
authors = ["hauntedcupoftea <andydchauhan@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
prophet = "^1.1.6"
fastapi = { extras = ["standard"], version = "^0.115.5" }

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
