[tool.poetry]
name = "dps-ai-challenge"
version = "0.2.0"
description = "Application for DPS Artificial Intelligence Engineer Challenge."
authors = ["hauntedcupoftea <andydchauhan@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
repository = "https://github.com/hauntedcupoftea/DPS-AI-Challenge"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
prophet = "^1.1.6"
fastapi = { extras = ["standard"], version = "^0.115.5" }
pydantic = "^2.10.2"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"
pyqt6 = "^6.7.1"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
